# telegram-inbox-bot

./: .env.example  .gitignore  README.md  custom_categories.toml  pyproject.toml
docs/: friend-setup-macos.md  friend-setup-windows.html  friend-setup-windows.md
docs/plans/: 2026-06-28-telegram-inbox-bot.md  2026-07-04-inbox-categories-update.md  2026-07-05-friend-replication-gemini.md  2026-07-05-friend-windows-package.md
docs/specs/: 2026-06-28-telegram-inbox-bot-design.md  2026-07-04-friend-replication-gemini-design.md  2026-07-04-inbox-categories-update-design.md  2026-07-05-friend-windows-package-design.md
launchd/: com.shao.life-journal.plist  com.shao.telegram-inbox.plist  life-journal-commit.sh  reload.sh
scripts/: create_funny_db.py  get_channel_id.py  provision_notion.py
src/inbox_bot/: bot.py  categories.py  classifier.py  config.py  digest.py  journal.py  main.py  notion_writer.py  reminders.py  schemas.py
src/inbox_bot/prompts/: classify.md
tests/: test_bot.py  test_categories.py  test_classifier.py  test_config.py  test_digest.py  test_journal.py  test_main.py  test_notion_writer.py  test_provision_notion.py  test_reminders.py  test_schemas.py
windows/: run_bot.bat
