[project]
name = "inbox-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0,<22",
    "anthropic>=0.40,<1",
    "notion-client>=2.2,<3",
    "apscheduler>=3.10,<4",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "httpx>=0.27,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "freezegun>=1.4,<2",
    "respx>=0.21,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = false
