[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inbox-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0,<22",
    "notion-client>=2.2,<2.4",  # pin to classic 2022-06-28 API (database_id parent + databases.query); 2.4+ defaults to 2025-09-03 data-sources API which this code doesn't use
    "apscheduler>=3.10,<4",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "httpx>=0.27,<1",
    "openai>=1.40,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "freezegun>=1.4,<2",
    "respx>=0.21,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/inbox_bot"]
